# NeuroCanvas

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README-IT.md  README.md  docker-compose.yml  package-lock.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
backend/: .gitignore  Cargo.toml  README-IT.md  README.md
backend/src/: main.rs
frontend/: README-IT.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: model.json
frontend/src/: App.tsx  DrawingCanvas.tsx  NetworkVisualizer.tsx  TranslationProvider.tsx  index.css  main.tsx  translationContext.ts  translations.ts  types.ts  vite-env.d.ts
frontend/src/wasm/: wasm_engine.d.ts  wasm_engine.js  wasm_engine_bg.wasm  wasm_engine_bg.wasm.d.ts
wasm-engine/: Cargo.toml
wasm-engine/src/: lib.rs
wasm-engine/tests/: neural_engine_integration.rs  wasm_api.rs
