[package]
name = "neuralcanvas-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = "0.8"
base64 = "0.22"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "macros", "json"] }
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "fs", "io-util", "net"] }
tower-http = { version = "0.6", features = ["cors"] }
